# llmplan

./: .cursorignore  .dockerignore  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env.example  main.py  pyproject.toml
.gemini/: styleguide.md
.github/: cr.yaml
.github/prd/: operations-guide.md  service-context.md  technical-specs.md
.github/prompts/: commit-message-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  helm-release.yml  release.yml
charts/: README.md
charts/llmplan/: Chart.yaml  values.yaml
charts/llmplan/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  lmstudio-service.yaml  service.yaml  serviceaccount.yaml
docker/: README.md  docker-compose.yml  nginx.conf
experiments/: main.ipynb  pyproject.toml
experiments/message2expense/: opencua-eun2ce-01.ipynb  pyproject.toml  run_episode.py
experiments/message2expense/results/1921c65e-38c4-4aec-a298-f7d8a8635197/: 1921c65e-38c4-4aec-a298-f7d8a8635197_actions.json
k8s/: README.md
k8s/manifests/: deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
src/app/: __init__.py  main.py
src/app/application/dtos/requests/: summary_request.py
src/app/application/dtos/responses/: summary_response.py
src/app/application/use_cases/: summary_use_cases.py
src/app/config/: container.py  lifespan.py  settings.py
src/app/domain/entities/: summary.py
src/app/domain/repositories/: summary_repository.py
src/app/domain/services/: summary_service.py
src/app/domain/value_objects/: summary_config.py
src/app/infrastructure/repositories/: lmstudio_summary_repository.py
src/app/presentation/: __init__.py
src/app/presentation/routers/: health.py  summary.py
tests/: conftest.py  test_api.py  test_basic.py  test_ci_safe.py  test_domain_entities.py  test_domain_services.py  test_integration.py  test_use_cases.py  test_value_objects.py
