[project]
name = "llmplan"
version = "0.1.0"
description = ""
authors = [
    {name = "eun2ce", email = "joeun2ce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dependency-injector>=4.48.1",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.32.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]